<resources>
    <string name="app_name">Axe</string>
    <string name="Version">Axe V1.29.3\n			By Mizumaki-machi</string>
    <string name="VerDate">2023/08/11</string>
    <string name="OptionMenu_Stop">Exit</string>
    <string name="OptionMenu_Menu">Menu</string>
    <string name="OptionMenu_Help">Help</string>
    <string name="ContextMenu_File">File</string>
    <string name="ContextMenu_FileNew">New</string>
    <string name="ContextMenu_FileOpen">Open</string>
    <string name="ContextMenu_FileOpenPopup">File-Open</string>
    <string name="ContextMenu_FileSave">Save</string>
    <string name="ContextMenu_FileDownload">Download/Expand</string>
    <string name="ContextMenu_FileSaveAs">SaveAs</string>
    <string name="ContextMenu_FileDiscard">Discard</string>
    <string name="ContextMenu_FileEnd">End</string>
    <string name="ContextMenu_FileOpenWith">OpenWith</string>
    <string name="ContextMenu_Edit">Edit</string>
    <string name="ContextMenu_EditCut">Cut</string>
    <string name="ContextMenu_EditCopy">Copy</string>
    <string name="ContextMenu_EditClear">Clear</string>
    <string name="ContextMenu_EditPaste">Paste</string>
    <string name="ContextMenu_EditPasteIns">PastIns</string>
    <string name="ContextMenu_EditPasteRep">PastRep</string>
    <string name="ContextMenu_Setup">Settings</string>
    <string name="ContextMenu_SetupFont">Font</string>
    <string name="ContextMenu_SetupColor">Color</string>
    <string name="ContextMenu_SetupOther">Other XE Options</string>
    <string name="ContextMenu_Button_Config">Button Configuration</string>
    <string name="ContextMenu_Button_Layout">Buttons layout</string>
    <string name="ContextMenu_Kbd_Config">Soft Kbd Layout</string>
    <string name="ContextMenu_SetupOtherArm">Android Related Options</string>
    <string name="ContextMenu_DownloadAsset">Download additional Asset</string>
    <string name="ContextMenu_Help">Help</string>
    <string name="ContextMenu_HelpXe">xe Help</string>
    <string name="ContextMenu_HelpAxe">About Axe</string>
    <string name="ContextMenu_HelpVersion">Version</string>
    <string name="ContextMenu_ShortcutkeyMap">Shortcut Key Assign</string>
    <string name="ContextMenu_ShiftkeyMap">Shift Key Mapping</string>
    <string name="ContextMenu_AltGrMap">AltGr Key Mapping</string>
    <string name="ContextMenu_TerminalBtn">Terminal Button Usage</string>
    <string name="HelpTitle_OptionHelp">About Axe</string>
    <string name="Help_OptionHelp">
   		"This is Android porting of Hybrid Editor \"xe\",\n"
        "  Source code:http://www.geocities.jp/sakachin2/index.htm\n"
        "    By Mizumaki-machi\n"
        "\n"
   		"    Currently following functions are not yet supported.\n"
   		"       Printing, Remote file access.\n"
        "\n"
   		"Push \"Menu\" button for Configuration and detail Helps.\n"
   		"(After Android-3,touch titlebar).\n"
   		"Help:\n"
   		"    Axe Help:Related to Android version.\n"
   		"    XE Help :Common help for all version.\n"
        "             It requres Asset installation.\n"
        "               Menu-->Settings\n"
        "                   -->Download addtional asset.\n"
   		"    National language support for Help text.\n"
   		"      You can prepare UTF-8 encoded text file on sdcard.\n"
        "      (/sdcard folder depends the device,\n"
        "       it may be /mnt/sdcard.)\n"
        "        /sdcard/Axe/nls/nls/subject.txt.\"\n"
        "            subject:same as Help dialog title replacing\n"
        "              space to under score.\n"
        "            ex) \"About_Axe\".\n"
        "       When using multiple language,\n"
        "       Prepare /sdcard/Axe/nls/nls_xx/subject.txt\n"  
        "         for each language.\n"  
        "           xx:language like as \"de\" or \"ja\".\n"
   		"Settings:\n"
   		"  select \"Android Related Options\"for screen,soft keyboard option.\n"
        "\n"
        "Buttons on bottom:\n"
        "\n"
        "  Use Usb/Bluetooth keyboard if you have.\n"
        "  Even without such keyboard,\n"
        "  with limited terminal keyboard or IM-soft-kbd,\n"
        "  you cau utilize function keys by these buttons setting.\n"
        "\n"
        "  Kbd:show xe\'s soft keyboard enabling operations\n"
        "        like as on PC keyboard/mouse.\n"
        "      See \"Axe Help\" for keyboard usage.\n"
        "      Button setting has no effect to input from xe\' soft-kbd.\n"
        "  IM :pop-up default Input Method.\n"
        "      You can change it by \"Settings\"\n"
        "        ==>\"Android Related Option\"==>\"Current Input Method\".\n"
        "      (Android IM will not popup when hardware kbd is connected.)\n"
        "  S.C:Shortcut. For ex, pressing \"1\" key\n"
        "        on hardware keyboard or IM soft kbd\n"
        "        after touching \"S.C\" button will generate\n"
        "        \"F1\" as default setting.\n"
        "      Note. \"S.C\",\"Shift\",\"1\"==>S.C+\"@\"\n"
        "            \"Shift\",\"S.C\",\"1\"==>Shift+\"F1\".\n"
        "      (\"Settings\"==>\"Button Configuration\"\n"
        "       ==>\"Shortcut Key Assign\")\n"
        "      Terminal Button such as \"Search\", \"Camera\"\n"
        "        can be used as Shortcut.\n"
        "      (\"Button Configuration\"==>\"Terminal Button Usage\")\n"
        "  Shift/AltG:When your hardware kbd has no AltG key \n"
        "    or you want to change keycode mapping with +Shift key,\n"
        "    use this to change mapping.\n"
        "      (\"Button Configuration\"\n"
        "       ==>\"Shift Key mapping\"/\"AltGr Key mapping\")\n"
        "  \n"
        "  Buttons layout is configurable.\n"
        "      (\"Button Configuration\"==>\"Button Layout\")\n"
        "    Long press on the button pop-ups dialog\n"
        "      to change button\'s function.\n"
        "    For directionkeys long press with "S.C" on.\n"
	</string>
    <string name="DialogTitle_OptionHelpAxe">Help Axe</string>
    <string name="DialogTitle_SetupOther">Other XE Options</string>
    <string name="HelpTitle_SetupOther">Other XE Options</string>
    <string name="Setup_Ruler">Ruler Type</string>
    <string name="Setup_RulerVertical">Vertical (Shift+Ctrl+F1)</string>
    <string name="Setup_RulerHorizontal">Horizontal (Shift+Ctrl+F2)</string>
    <string name="Setup_RulerCrossfier">CrossHair (Shift+Ctrl+F3)</string>
    <string name="Setup_RulerNone">No Ruler (type twice)</string>
    <string name="Setup_FreeCursor">FreeCursor</string>
    <string name="Setup_Beep">Beep</string>
    <string name="Setup_QuietExit">QuietExit</string>
    <string name="DialogTitle_SetupColor">Color</string>
    <string name="HelpTitle_SetupColor">Color</string>
    <string name="Setup_BackgroundColor">Background Color</string>
    <string name="Setup_RulerColor">Ruler Color</string>
    <string name="Setup_Red">Red</string>
    <string name="Setup_Green">Green</string>
    <string name="Setup_Blue">Blue</string>
    <string name="DialogTitle_SetupFont">Font</string>
    <string name="HelpTitle_SetupFont">Font</string>
    <string name="Setup_FontSize">Font Size</string>
    <string name="Setup_FontH">Font H</string>
    <string name="Setup_FontW">Font W</string>
    <string name="Setup_CellH">Row H</string>
    <string name="Setup_CellW">Column W</string>
    <string name="Setup_Ligature">Ligature</string>
    <string name="Setup_FontNormal">Normal</string>
    <string name="Setup_FontBold">Bold</string>
    <string name="Setup_FontItalic">Italic</string>
    <string name="Setup_FontBoldItalic">BoldItalic</string>
    <string name="Prompt_FontList">Select a FontName</string>
    <string name="DialogTitle_TerminalButton">Terminal Button Usage</string>
    <string name="HelpTitle_TerminalButton">Terminal Button Usage</string>
    <string name="Help_TerminalButton">
   		"You can use Terminal button as alternative of function key\n"
   		"You can use up to max 9 entry for other not-predefined terminal button.\n"
        "\n"
   		"ex) To assign \"Back\" button to \"F3\" key,\n"
   		"    select \"F3\" from drop down list after focused to \"Back\" line\n"
        "You can select mouse action from the drop down.\n"
   		"  \"Mouse-Rbtn\":Mouse right button for context menu pop-up\n"
   		"  \"Mouse-Drag\":use at the point Drag-start and Drag-end\n"
   		"                 to specify Cut and Paste range.\n"
   		"To use User_(_:1==>9), enter decimal Android keycode at first, the select function from dropdown\n"
   		"ex) After entered \"168\"(keycode:ZOOM_IN), select \"Esc\".\n"
   		"Then, \"ZOOM_IN\" button is treated as \"Esc\" key.\n"
	</string>
    <string name="DialogTitle_Download">Download</string>
    <string name="HelpTitle_Download">Download</string>
    <string name="Title_DL_URL">URL:</string>
    <string name="Title_DL_Local">Local Folder:</string>
    <string name="Title_DL_Unzip">Expand after download</string>
    <string name="Title_DL_DelZipfile">Delete after expanded the file</string>
    <string name="Title_DL_Unziponly">Only expand the local file</string>
    <string name="DL_BtnLocalRefCD">Open File Chooser</string>
    <string name="progress_dialog_title_downloading">Downloading...</string>
    <string name="progress_dialog_title_connecting">Connecting...</string>
    <string name="progress_dialog_message_prefix_downloading">Downloading file</string>
    <string name="progress_dialog_message_prefix_connecting">Connecting to</string>
    <string name="user_message_download_complete">Download complete!</string>
    <string name="user_message_download_canceled">Download canceled!</string>
    <string name="error_message_bad_url">Error: Invalid URL!</string>
    <string name="error_message_nofile_inurl">Specify compressed filename in URL column</string>
    <string name="error_message_bad_local">Error:Invalid Local Folder!</string>
    <string name="error_message_file_not_found">Error: File not found!</string>
    <string name="error_message_general">Error downloading file!</string>
    <string name="error_message_connerr">Connection Failed!</string>
    <string name="error_message_ioerr">I/O error!</string>
    <string name="progress_dialog_title_unzipping">Expanding...</string>
    <string name="progress_dialog_message_prefix_unzipping">Extracting file</string>
    <string name="user_message_unzip_complete">Expand complete!</string>
    <string name="user_message_unzip_canceled">Expand canceled!</string>
    <string name="Cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="ResetKbdLayout">Default</string>
    <string name="Help">Help</string>
    <string name="Delete">Delete</string>
    <string name="Replace">Replace</string>
    <string name="InsertAfter">Insert After</string>
    <string name="InsertBefore">Insert Before</string>
    <string name="Move">Move</string>
    <string name="Hint_MoveValue">shift count</string>
    <string name="Prompt_ButtonName">Select a Button Type</string>
    <string name="HWKbdDlgHdr_Normal">Key Label</string>
    <string name="HWKbdDlgHdr_Shift">+Shift</string>
    <string name="HWKbdDlgHdr_AltGr">+AltGr</string>
    <string name="HWKbdDlgHdr_ShiftAltGr">+Shift+AltGr</string>
    <string name="KbdDlgHdr_Pos1">""</string>
    <string name="KbdDlgHdr_Normal1">Center</string>
    <string name="KbdDlgHdr_Shift1">LT:Left</string>
    <string name="KbdDlgHdr_Symbol1">RT:Right</string>
    <string name="KbdDlgHdr_AltGr1">LB:Up</string>
    <string name="KbdDlgHdr_ShiftAltGr1">RB:Down</string>
    <string name="KbdDlgHdr_Pos2">Row/Col</string>
    <string name="KbdDlgHdr_Normal2">Code</string>
    <string name="KbdDlgHdr_Shift2">+Shift</string>
    <string name="KbdDlgHdr_Symbol2">+SYM</string>
    <string name="KbdDlgHdr_AltGr2">+AltGr</string>
    <string name="KbdDlgHdr_ShiftAltGr2">S+AltGr</string>
    <string name="ContextMenu_Kbd_ConfigHW">Hard Kbd Settings</string>
</resources>