<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
		    <item android:id="@+id/CM_OPEN"
        		android:title="@string/ContextMenu_FileOpen"
    		/>
		    <item android:id="@+id/CM_END"
        		android:title="@string/ContextMenu_FileEnd"
    		/>
		    <item android:id="@+id/CM_DISCARD"
        		android:title="@string/ContextMenu_FileDiscard"
    		/>
		    <item android:id="@+id/CM_SAVE"
        		android:title="@string/ContextMenu_FileSave"
    		/>
		    <item android:id="@+id/CM_SAVEAS"
        		android:title="@string/ContextMenu_FileSaveAs"
    		/>
		    <item android:id="@+id/CM_OPENWITH"
        		android:title="@string/ContextMenu_FileOpenWith"
    		/>
		    <item android:id="@+id/CM_DOWNLOAD"
        		android:title="@string/ContextMenu_FileDownload"
    		/>
</menu>
