<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
>
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="#ff000080"
            android:gravity="center"
    >
        <TextView
            android:text="@string/KbdDlgHdr_Pos1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_gravity="center"
     		android:textColor="#ffffffff"
	         android:layout_weight="0.12"
        />                                     
        <TextView
            android:text="@string/KbdDlgHdr_Normal1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
     		android:textColor="#ffffffff"
	         android:layout_weight="0.17"
        />                                     
        <TextView
            android:text="@string/KbdDlgHdr_Shift1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
	         android:layout_weight="0.17"
     		android:textColor="#ffffffff"
        />                                     
        <TextView
            android:text="@string/KbdDlgHdr_Symbol1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
	         android:layout_weight="0.17"
     		android:textColor="#ffffffff"
        />                                     
        <TextView
            android:text="@string/KbdDlgHdr_AltGr1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
	         android:layout_weight="0.17"
     		android:textColor="#ffffffff"
        />                                     
        <TextView
            android:text="@string/KbdDlgHdr_ShiftAltGr1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
	         android:layout_weight="0.17"
     		android:textColor="#ffffffff"
        />                                     
    </LinearLayout>
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="#ff000080"
            android:gravity="center"
    >
        <TextView
            android:text="@string/KbdDlgHdr_Pos2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_gravity="center"
     		android:textColor="#ffffffff"
	         android:layout_weight="0.12"
        />                                     
        <TextView
            android:text="@string/KbdDlgHdr_Normal2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
     		android:textColor="#ffffffff"
	         android:layout_weight="0.17"
        />                                     
        <TextView
            android:text="@string/KbdDlgHdr_Shift2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
	         android:layout_weight="0.17"
     		android:textColor="#ffffffff"
        />                                     
        <TextView
            android:text="@string/KbdDlgHdr_Symbol2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
                 android:layout_weight="0.17"
     		android:textColor="#ffffffff"
        />                                     
        <TextView
            android:text="@string/KbdDlgHdr_AltGr2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
	         android:layout_weight="0.17"
     		android:textColor="#ffffffff"
        />                                     
        <TextView
            android:text="@string/KbdDlgHdr_ShiftAltGr2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
	         android:layout_weight="0.17"
     		android:textColor="#ffffffff"
        />                                     
    </LinearLayout>
</LinearLayout>
