<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <RelativeLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
    >
    <!--android:layout_width="300dp"-->
        <LinearLayout
             android:id="@+id/Bottoms"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
                 android:layout_alignParentBottom="true"
        >
            <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="1sp"
                 android:background="#fff0f0f0"
                 android:orientation="vertical"
            />
            <LinearLayout
                 android:id="@+id/DialogButtons"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
            >
                <Button
                    android:id="@+id/Close"            
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/OK"
                    android:layout_gravity="center_vertical"
                />
                <Button
                    android:id="@+id/Cancel"           
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/Cancel"
                    android:layout_gravity="center_vertical"
                />
                <Button
                    android:id="@+id/Help"           
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/Help"
                    android:layout_gravity="center_vertical"
                />
            </LinearLayout>
        </LinearLayout>
        <!-- above buttons -->
        <LinearLayout
             android:id="@+id/ScrollViewContainer"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
                 android:layout_alignParentTop="true"
                 android:layout_above="@id/Bottoms"
        >
            <ScrollView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
            >
                <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                >   <!-- layout in scrollview -->
                    <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="1sp"
                         android:background="#fff0f0f0"
                         android:orientation="vertical"
                    />
                    <CheckBox
                        android:id="@+id/Delete"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Delete"
                    />
                    <CheckBox
                        android:id="@+id/Replace"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Replace"
                    />
                    <CheckBox
                        android:id="@+id/InsertBefore"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/InsertBefore"
                    />
                    <CheckBox
                        android:id="@+id/InsertAfter"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/InsertAfter"
                    />
                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                    >
                        <CheckBox
                            android:id="@+id/Move"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Move"
                        />
                        <EditText
                            android:id="@+id/MoveValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="100sp"
                            android:text=""
                            android:hint="@string/Hint_MoveValue"
                        />
                    </LinearLayout>
                    <Spinner
                         android:id="@+id/Spinner"
                         android:layout_height="wrap_content"
                         android:layout_width="fill_parent"
                         android:prompt="@string/Prompt_ButtonName"
                    />
                </LinearLayout> <!-- layout in scrollview -->
            </ScrollView>
        </LinearLayout> <!-- scrollview container-->
    </RelativeLayout>
</LinearLayout>
