<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ListViewLine"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:background="#ff000080"
>
    <!--LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_gravity="center_vertical"
	         android:layout_weight="0.3"
            android:gravity="center"
    -->                                         
        <TextView
            android:text="@string/HWKbdDlgHdr_Normal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_gravity="center"
     		android:textColor="#ffffffff"
	         android:layout_weight="1"
        />                                     
    <!--/LinearLayout-->
    <!--LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_gravity="center_vertical"
	         android:layout_weight="0.7"
    -->                                         
        <TextView
            android:text="@string/HWKbdDlgHdr_Shift"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_gravity="center_vertical"
                 android:layout_weight="1"
     		android:textColor="#ffffffff"
        />                                     
        <TextView
            android:text="@string/HWKbdDlgHdr_AltGr"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_gravity="center_vertical"
                 android:layout_weight="1"
     		android:textColor="#ffffffff"
        />                                     
        <TextView
            android:text="@string/HWKbdDlgHdr_ShiftAltGr"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_gravity="center_vertical"
                 android:layout_weight="1"
     		android:textColor="#ffffffff"
        />                                     
    <!--/LinearLayout-->
</LinearLayout>
