<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <Spinner
         android:id="@+id/Spinner"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
    />
	<LinearLayout 
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
	      android:background="#ff404040"
		 android:orientation="vertical"
         android:layout_weight="1"
	>
        <ListView
            android:id="@+id/List"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        />
    </LinearLayout>
    <LinearLayout
         android:id="@+id/DialogButtons"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="2px"
         android:layout_alignParentBottom="true"
    >
        <Button
            android:id="@+id/Close"                        
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/OK"
            android:layout_gravity="center_vertical"
        />
        <Button
            android:id="@+id/Reset"                        
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/ResetKbdLayout"
            android:layout_gravity="center_vertical"
        />
        <Button
            android:id="@+id/Cancel"                       
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/Cancel"
            android:layout_gravity="center_vertical"
        />
        <Button
            android:id="@+id/Help"                       
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/Help"
            android:layout_gravity="center_vertical"
        />
    </LinearLayout>
</LinearLayout>
